<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">List-FloatingLabels</string>
    <string name="app_param">Parametry</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>


    <string name="btn_save">Zapisz</string>

    <string name="err_msg_land">Wprowadź min. 3 znaki </string>
    <string name="err_msg_city">wprowadź min. 1 znak </string>
    <string name="err_msg_line">Wybierz linię</string>
    <string name="err_msg_stop">Wybierz przytanek</string>

    <string name="hint_land">Kraj</string>
    <string name="hint_city">Miasto</string>
    <string name="hint_stop">Przystanek</string>
    <string name="hint_line">Linia</string>
    <string name="Conform">Dane zapisane</string>
    <string name="hint_from">Od</string>
    <string name="hint_down">Do</string>
    <string name="default_land">Polska</string>
    <string name="default_city">Białystok</string>
    <string name="hint_search_stop">Wprowadź nazwę przystanku</string>
    <string name="hint_search_line">Wprowadź linię</string>


    <!--  <string-array name="stop_array">
          <item></item>
          <item>250-Białowny</item>
          <item>260-Lipowa</item>
          <item>270-Piłsudzkiego</item>
          <item>280-Pogodna</item>
      </string-array>


      <string-array name="line_array">
          <item></item>
          <item>2-Kierunek A</item>
          <item>8-Kierunek B</item>
          <item>11-Kierunek C</item>
          <item>12-Kierunek D</item>
      </string-array>-->
</resources>